movving scdc pic up to avoid gap

--- a/css/design.css
+++ b/css/design.css
@@ -457,7 +457,6 @@ a:hover {
 }
 #scdc {
     background-image: url("../img/conferences-states.png");
-    background-position: 0px -20px;
 }
 #icdc {
     background-image: url("../img/conferences-icdc.jpg");
